--- a/app/static/sty.css
+++ b/app/static/sty.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-image: url("img/y2mate.com\ -\ Oceans\ Motion\ Background\ For\ Worship\ Loop\ HD_480p.mp4");
+    background-image: url("img/joshua-sortino-m5P0c6ABWDs-unsplash.jpg");
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
